--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     margin: 50 auto;
     padding: 20px;
     border: 30px solid #da18c9;
-    height:25vh
+    height:25vh;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    
 
   }
   
@@ -23,9 +25,12 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 5px;
+
   }
   
+
   button {
     padding: 10px;
-    font-size: 16px;
+    font-size: 18px;
+
   }
