--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .calculator {
     width: 300px;
-    margin: 50 auto;
+    margin: 40 auto;
     padding: 20px;
     border: 30px solid #da18c9;
     height:25vh;
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-    
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 
   }
   
@@ -17,6 +17,7 @@
     justify-content: center;
     align-items: right;
     display: flex; 
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
    
 
   }
@@ -25,8 +26,10 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 5px;
+    
+    
+   }
 
-  }
   
 
   button {
