--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     height:25vh;
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
 
   }
   
@@ -27,7 +31,7 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 5px;
     
-    
+
    }
 
   
